syntax = "proto3";

package protocol;

message WsWelcome {
  uint64 alias = 1;
}

message WsSystem {
  uint64 from_alias = 1;
  bytes body = 2;
}

message WsIdentity {
  uint64 from_alias = 1;
  string identity = 2;
  bytes body = 3;
}

message WsMessage {
  oneof data {
    WsWelcome welcomeMessage = 1;
    WsSystem systemMessage = 2;
    WsIdentity identityMessage = 3;
  }
}
